# vxrt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  shader_string.cmake
include/: block.hpp  camera.hpp  defines.hpp  extern_includes.hpp  input.hpp  movement.hpp  section.hpp  shader.hpp  shader_source.hpp  structs.hpp  window.hpp
shaders/: center_octree_pass1.comp  center_octree_pass2.comp  fragment.frag  raytracing-indirect.comp  raytracing.comp  section_octree_pass1.comp  section_octree_pass2.comp  vertex.vert
src/: block.cpp  camera.cpp  input.cpp  main.cpp  movement.cpp  section.cpp  shader.cpp  window.cpp
